first Js function

--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -1,4 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-<script src="Basic_JavaScript_1.js"</script>
+
+<header>
+	<h1 id="Header_1">This website is to remind you he slumby</h1>
+</header>
+
+
+<script src="Basic_JavaScript_1.js"></script>
+
+
 </html>
